src/app/globals.css
/*
Copyright (c) 2024 Streetlives, Inc.

Use of this source code is governed by an MIT-style
license that can be found in the LICENSE file or at
https://opensource.org/licenses/MIT.
*/

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    scroll-behavior: smooth;
    width: 100%;
    box-sizing: border-box;
  }

  * {
    box-sizing: border-box;
  }

  body {
    width: 100%;
  }

  [x-cloak] {
    display: none !important;
  }

  :root {
    --radius: 0.5rem;
  }
}

@layer components {
  .primary-button {
    @apply inline-block bg-black font-medium text-white text-sm text-center py-3 px-12 rounded-lg transition hover:brightness-125 focus:outline-none shadow;
  }

  .outline-button {
    @apply bg-neutral-50 font-medium text-sm text-center py-3 px-5 rounded-lg transition hover:border-dark focus:outline-none shadow border-[1.5px] border-neutral-600 flex-1 inline-block;
  }

  .secondary-button {
    @apply text-xs flex-1 flex items-center justify-center py-1 px-5 space-x-2 text-dark transition hover:text-black hover:border-black border border-gray-300 rounded-3xl bg-neutral-50;
  }

  .link {
    @apply text-[#1A73E9] underline hover:no-underline;
  }

  .carousel-wrapper .swiper-pagination .swiper-pagination-bullet {
    @apply !bg-neutral-200 !w-2 !h-2;
  }

  .carousel-wrapper .swiper-pagination .swiper-pagination-bullet-active {
    @apply !bg-gray-700;
  }

  .service-info br:first-child {
    display: none;
  }
}

[type="checkbox"]:checked {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e") !important;
}

/* hide the translation spinner */
.VIpgJd-ZVi9od-aZ2wEe-wOHMyf {
  display: none !important;
}

.have-links a {
  color: #1a73e9 !important;
  text-decoration: underline !important;
  display: inline-block;
  /* Or block, depending on your layout */
  white-space: normal;
  /* Allows text to wrap */
  word-wrap: break-word;
  /* Breaks long words onto the next line if needed */
  overflow-wrap: break-word;
  hyphens: auto;
  max-width: 300px;
}

@media (max-width: 850px) {
  .have-links a {
    max-width: 250px;
  }
}

@media (max-width: 350px) {
  .have-links a {
    max-width: 200px;
  }
}

/* Google maps */
/* a[href^="http://maps.google.com/maps"]{display:none !important}
a[href^="https://maps.google.com/maps"]{display:none !important} */

#map {
  transition: transform 1s;
}

.gmnoprint a,
.gmnoprint span,
.gm-style-cc {
  display: none;
}

.gmnoprint div {
  background: white !important;
  border-radius: 8px !important;
}

/* loading skeletons */
.shimmerBG {
  animation-duration: 2.2s;
  animation-fill-mode: forwards;
  will-change: background-position;
  animation-iteration-count: infinite;
  animation-name: shimmer;
  animation-timing-function: linear;
  background: #ddd;
  background: linear-gradient(to right, #e0e0e0 8%, #efefef 18%, #e0e0e0 33%);
  background-size: 1200px 100%;
}

@-webkit-keyframes shimmer {
  0% {
    background-position: -100% 0;
  }

  100% {
    background-position: 100% 0;
  }
}

@keyframes shimmer {
  0% {
    background-position: -1200px 0;
  }

  100% {
    background-position: 1200px 0;
  }
}

.divider {
  height: 1px;
}

.loading-p-24 {
  padding: 24px;
}

.title-line {
  height: 24px;
  width: 100%;
  margin-bottom: 12px;
  border-radius: 20px;
}

.content-line {
  height: 12px;
  width: 100%;
  margin-bottom: 12px;
  border-radius: 8px;
}

.end {
  width: 40%;
  margin-bottom: 0px;
}

.m-t-24 {
  margin-top: 24px;
}

.gt_selector {
  background-color: transparent;
  border: none;
  font-size: 13px;
  font-weight: 500;
  outline: none;
  cursor: pointer;
}

.gt_selector:focus {
  outline: none;
}

.off-canvas-menu {
  visibility: hidden;
  transition: all 500ms;
  pointer-events: none;
}

.off-canvas-menu-active {
  visibility: visible;
  pointer-events: all !important;
}

.off-canvas-menu .menu-container {
  transform: translateX(-100%);
}

.off-canvas-menu-active .menu-container {
  transform: translateX(0);
}

.filter-popup-animated {
  display: block;
  animation: fadeIn 0.5s ease-in-out;
  /* Optionally add other styles like position, height, etc. */
}

.filters-hidden {
  display: none;
  animation: slideDown 0.5s ease-in-out;
}

/* loading skeletons */
/* .card {
  position: relative;
  -webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
  background-color: #fff;
  border-radius: 6px;
  height: 760px;
  overflow: hidden;
  width: 360px;
  margin: 40px auto;
} */

.shimmerBG {
  animation-duration: 2.2s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: shimmer;
  animation-timing-function: linear;
  background: #ddd;
  background: linear-gradient(to right, #e0e0e0 8%, #efefef 18%, #e0e0e0 33%);
  background-size: 1200px 100%;
}

@-webkit-keyframes shimmer {
  0% {
    background-position: -100% 0;
  }

  100% {
    background-position: 100% 0;
  }
}

@keyframes shimmer {
  0% {
    background-position: -1200px 0;
  }

  100% {
    background-position: 1200px 0;
  }
}

.divider {
  height: 2px;
}

.p-24 {
  padding: 24px;
}

.title-line {
  height: 24px;
  width: 100%;
  margin-bottom: 12px;
  border-radius: 20px;
}

.content-line {
  height: 12px;
  width: 100%;
  margin-bottom: 12px;
  border-radius: 8px;
}

.end {
  width: 40%;
  margin-bottom: 0px;
}

.m-t-24 {
  margin-top: 24px;
}

@media only screen and (max-width: 768px) {
  main.showMapOnMobile > #left_panel {
    display: none;
  }

  main.showMapOnMobile > #map_container {
    display: block;
  }

  main.hideMapOnMobile > #left_panel {
    display: block;
  }

  main.hideMapOnMobile > #map_container {
    display: none;
  }
}

div.skiptranslate,
#google_translate_element {
  display: none !important;
}

body {
  top: 0 !important;
}

font {
  background-color: transparent !important;
  box-shadow: none !important;
  position: initial !important;
}

/**
 * ==============================================
 * Loading animation map
 * ==============================================
 */
.dot-pulse {
  position: relative;
  left: -9999px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #333333;
  color: #333333;
  box-shadow: 9999px 0 0 -5px;
  animation: dot-pulse 1.5s infinite linear;
  animation-delay: 0.25s;
}

.dot-pulse::before,
.dot-pulse::after {
  content: "";
  display: inline-block;
  position: absolute;
  top: 0;
  width: 8px;
  height: 8px;
  border-radius: 5px;
  background-color: #333333;
  color: #333333;
}

.dot-pulse::before {
  box-shadow: 9984px 0 0 -5px;
  animation: dot-pulse-before 1.5s infinite linear;
  animation-delay: 0s;
}

.dot-pulse::after {
  box-shadow: 10014px 0 0 -5px;
  animation: dot-pulse-after 1.5s infinite linear;
  animation-delay: 0.5s;
}

@keyframes dot-pulse-before {
  0% {
    box-shadow: 9984px 0 0 -5px;
  }

  30% {
    box-shadow: 9984px 0 0 2px;
  }

  60%,
  100% {
    box-shadow: 9984px 0 0 -5px;
  }
}

@keyframes dot-pulse {
  0% {
    box-shadow: 9999px 0 0 -5px;
  }

  30% {
    box-shadow: 9999px 0 0 2px;
  }

  60%,
  100% {
    box-shadow: 9999px 0 0 -5px;
  }
}

@keyframes dot-pulse-after {
  0% {
    box-shadow: 10014px 0 0 -5px;
  }

  30% {
    box-shadow: 10014px 0 0 2px;
  }

  60%,
  100% {
    box-shadow: 10014px 0 0 -5px;
  }
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #9f9e9e;
  border-radius: 8px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

